2022-11-07T08:29:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3408708040 # 593
* notice: last 14d: unq all: 7 12
* notice: prev accum: outdated-unq outdated-all / unq all: 146 604 / 155 620
* notice: next accum: outdated-unq outdated-all / unq all: 146 604 / 154 616
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -4 / +2 +5 -1 -4 / 1 1
* notice: removed / changed dates: [] / [2022-10-24]

2022-11-06T16:28:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3405117788 # 591
* notice: last 14d: unq all: 8 16
* notice: prev accum: outdated-unq outdated-all / unq all: 145 603 / 154 619
* notice: next accum: outdated-unq outdated-all / unq all: 146 604 / 155 620
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-10-23] / [2022-11-06]

2022-11-04T02:04:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3390697007 # 583
* notice: last 14d: unq all: 8 16
* notice: prev accum: outdated-unq outdated-all / unq all: 144 602 / 154 619
* notice: next accum: outdated-unq outdated-all / unq all: 145 603 / 154 619
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-20] / []

2022-11-02T16:34:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3379383858 # 579
* notice: last 14d: unq all: 9 17
* notice: prev accum: outdated-unq outdated-all / unq all: 144 602 / 153 617
* notice: next accum: outdated-unq outdated-all / unq all: 144 602 / 154 619
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-02]

2022-10-31T16:34:20Z: