@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-07T08:29:22Z",
-  "count_outdated" : 604,
-  "uniques_outdated" : 146,
-  "count" : 616,
-  "uniques" : 154,
+  "timestamp" : "2022-11-07T16:29:54Z",
+  "count_outdated" : 609,
+  "uniques_outdated" : 148,
+  "count" : 620,
+  "uniques" : 155,
   "views" : [
-    {
-      "timestamp": "2022-10-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 5 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-10-25T00:00:00Z",
       "count": 2,
