@@ -1,3 +1,11 @@
+2022-11-07T16:29:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3412172178 # 594
+* notice: last 14d: unq all: 6 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 146 604 / 154 616
+* notice: next accum: outdated-unq outdated-all / unq all: 148 609 / 155 620
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-24] / []
+
 2022-11-07T08:29:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3408708040 # 593
 * notice: last 14d: unq all: 7 12
